--- a/package.json
+++ b/package.json
@@ -4,39 +4,31 @@
   "version": "0.0.0",
   "author": "knjcode <knjcode@gmail.com>",
   "license": "MIT",
-
   "keywords": "hubot, hubot-scripts",
-
   "repository": {
     "type": "git",
     "url": "git://github.com/hubot-scripts/hubot-otsukare-yamero.git"
   },
-
   "bugs": {
     "url": "https://github.com/hubot-scripts/hubot-otsukare-yamero/issues"
   },
-
-  "dependencies": {
-  },
-
+  "dependencies": {},
   "peerDependencies": {
     "hubot": "2.x"
   },
-
   "devDependencies": {
-    "hubot": "2.x",
-    "mocha": "*",
     "chai": "*",
-    "sinon-chai": "*",
-    "sinon": "*",
+    "coffee-script": "^1.8.0",
+    "grunt-contrib-watch": "~0.6.1",
     "grunt-mocha-test": "~0.12.4",
     "grunt-release": "~0.9.0",
+    "hubot": "2.x",
     "matchdep": "~0.3.0",
-    "grunt-contrib-watch": "~0.6.1"
+    "mocha": "*",
+    "sinon": "*",
+    "sinon-chai": "*"
   },
-
   "main": "index.coffee",
-
   "scripts": {
     "test": "grunt test"
   }
